// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="search-name animate__animated animate__fadeIn"
  >
     
    Mafalda
     
  </h3>
  <p
    className="loader animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="search-name animate__animated animate__fadeIn"
  >
     
    Mafalda
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
